[package]
name = "top-gun"
version = "0.1.0"
authors = ["bengles <benglesson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
nalgebra = { version = "0.18.1", features = ["serde-serialize"] }
specs = { version = "0.16.1", features = ["specs-derive"] }
laminar = "0.3.2"
crossbeam-channel = "^0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"